# msg

./: CMakeLists.txt  acconfig.h.in
include/msgr/: Auth.h  BufferAllocator.h  Clock.h  Cond.h  Connection.h  Crypto.h  Dispatcher.h  Entry.h  Message.h  Messenger.h  MsgrConfig.h  MsgrContext.h  Mutex.h  PrebufferedStreambuf.h  RefCountedObj.h  SimplePolicyMessenger.h  Spinlock.h  Thread.h  Throttle.h  armor.h  atomic.h  blobhash.h  buffer.h  byteorder.h  compat.h  compiler_extensions.h  cpp_errno.h  crc32c.h  dout.h  encoding.h  environment.h  hash.h  hash_namespace.h  intarith.h  intrusive_ptr.h  io_priority.h  msg_types.h  msgr.h  msgr_assert.h  msgr_features.h  (+10 more)
src/: BufferAllocator.cc  Clock.cc  Connection.cc  Crypto.cc  DispatchQueue.cc  DispatchQueue.h  FIFOQueue.h  Message.cc  Messenger.cc  MsgrConfig.cc  MsgrContext.cc  Mutex.cc  PrebufferedStreambuf.cc  RefCountedObj.cc  Thread.cc  Throttle.cc  arm.c  arm.h  armor.c  buffer.cc  cpp_errno.cc  crc32c.cc  crc32c_intel_baseline.c  crc32c_intel_baseline.h  crc32c_intel_fast.c  crc32c_intel_fast.h  dout.cc  environment.cc  il_atomic.h  intel.c  intel.h  io_priority.cc  msg_types.cc  msgr_assert.cc  msgr_strings.cc  page.cc  probe.cc  probe.h  safe_io.cc  sctp_crc32.c  (+4 more)
src/async/: AsyncConnection.cc  AsyncConnection.h  AsyncMessenger.cc  AsyncMessenger.h  Event.cc  Event.h  LocalConnection.cc  LocalConnection.h  net_handler.cc  net_handler.h
tests/: MCommand.h  MPing.h  MessageId.h  client.cc  data  fake_dispatcher.h  run_client  run_server  sample_msg.h  server.cc  test_msgr.cc
